Update and rename 连寄生植物菟丝子都会潜水，太颠覆认知了！.md to Parasitic_plants/连寄生植物菟丝子都会潜水，太颠覆认知了！.md

--- a/Parasitic_plants/连寄生植物菟丝子都会潜水，太颠覆认知了！.md
+++ b/Parasitic_plants/连寄生植物菟丝子都会潜水，太颠覆认知了！.md
@@ -10,6 +10,7 @@
 更有趣的是，这种现象并非个例。论文中还提到，早在 1911 年，一位植物学家就曾在实验条件下让另一种菟丝子在水下短期生长，但那只是几天的实验。而 C. obtusiflora 的案例，是自然环境中稳定的沉水寄生生态系统。
 	
 研究者推测，这种菟丝子可能在干季时先寄生在露出水面的宿主上，当河水回涨，宿主被淹没后，它依然能通过维持寄生来获得营养，从而“被迫”适应了沉水状态。这种适应，说明寄生植物可能具备比我们想象更强的生态可塑性。
+文献来源：
 Genetic identification of submersed dodder (Cuscuta: Convolvulaceae) in Texas, U.S.A.
 November 2022Journal of the Botanical Research Institute of Texas 16(2):585-590
 DOI:10.17348/jbrit.v16.i2.1269
